feat: go back to firacode font and remove ligatures in vscode

--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -8,5 +8,6 @@
     "workbench.colorTheme": "Monokai Dark Soda",
     "python.formatting.provider": "black",
     "diffEditor.ignoreTrimWhitespace": false,
-    "editor.fontFamily": "'FuraMono Nerd Font', 'monospace', monospace"
+    "editor.fontFamily": "'FiraCode Nerd Font', 'monospace', monospace",
+    "editor.fontLigatures": false
 }
