--- a/.config/paru/paru.conf
+++ b/.config/paru/paru.conf
@@ -17,12 +17,13 @@ DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg -fossil
 #BottomUp
 #RemoveMake
 #SudoLoop
-#UseAsk
+UseAsk
 #SaveChanges
 #CombinedUpgrade
-#CleanAfter
+CleanAfter
 UpgradeMenu
 #NewsOnUpgrade
+BatchInstall
 
 #LocalRepo
 #Chroot
