feat: add themes and gitmodules

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -11,6 +11,13 @@
 #import:
 #  - /path/to/alacritty.yml
 
+import:
+  # uncomment the flavour you want below:
+  # - ~/.dotfiles/.config/alacritty/themes/catppuccin/catppuccin-mocha.yml
+  - ~/.dotfiles/.config/alacritty/themes/catppuccin/catppuccin-macchiato.yml
+  # - ~/.dotfiles/.config/alacritty/themes/catppuccin/catppuccin-frappe.yml
+  # - ~/.dotfiles/.config/alacritty/themes/catppuccin/catppuccin-latte.yml
+
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
